Caution_Issues
Let's install Module about "pymysql", "openpyxl", "JAVA", "JPYPE", "konlpy"

#Install via terminal(cmd mode)_Admin mode (cmd + Ctrl + Shift)
1. Install pymysql - pip install pymysql before making create_train_data_table.py file
2. Install openpyxl - pip install openpyxl before making load_train_data.py file	    
3. Install JPYPE - pip install JPype1‑1.2.0‑cp39‑cp39‑win_amd64.whl

**caution : D:/Java = D:/Python (Drive Storage consistency)
	    Upgrade pip before Uninstall JPype1
	    pip install JPype1
	    
**caution : Download JAVA
	    Install JPype
	    Install konlpy
	    
4. Install konlpy - pip install konlpy
5. Data-Science basic tools
	- numpy
	- pandas (Python Data Analysis Library)
	- matplotlib
	- scipy (optional)
	- tensorflow 
	- keras
	- Pycharm (Managing Different versions)


- issue 1
#When trying to import smth from config.py file, failed

>>> import openpyxl
>>> from config.DatabaseConfig import *
Traceback (most recent call last):
  File "<pyshell#2>", line 1, in <module>
    from config.DatabaseConfig import *
ModuleNotFoundError: No module named 'config.DatabaseConfig'; 'config' is not a package

>>> import pymysql
>>> from Scripts.chatbot.config.DatabaseConfig import *
Traceback (most recent call last):
  File "<pyshell#24>", line 1, in <module>
    from Scripts.chatbot.config.DatabaseConfig import *
  File "C:\Python\Python39\Scripts\chatbot\config\DatabaseConfig.py", line 1
    Python 3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)] on win32
           ^
SyntaxError: invalid syntax

- solution
# you don't need any words in '__init__.py'
the dir won't reckon package dir, To reckon Python Directory, needed '__init__.py' file in the folder.

# Before beginning Module, write the code down inward import
import pymysql
path.append(pymysql.path.dirname(pymysql.path.abspath(pymysql.path.dirname(__file__))) )

# System Setting > Environment Variable Edit "Python_Path" to Project addr


-issue 2
#When trying to create table by pymysql, failed
>>> import pymysql
>>> connection = pymysql.connect(host="127.0.0.1", user="root", password="1234",
			     db="study_db", charset="utf8")
>>> cur = connection.cursor()

#before selecting data, create table 'users' by MySQL Workbench
CREATE TABLE `users` (
    `id` int(11) NOT NULL AUTO_INCREMENT,
    `email` varchar(255) COLLATE utf8_bin NOT NULL,
    `password` varchar(255) COLLATE utf8_bin NOT NULL,
    PRIMARY KEY (`id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_bin
AUTO_INCREMENT=1 ;

#Check syntax validation by inserting data into 'users' by MySQL Workbench
insert into users values(1,'John@salody.com','j1542');
select * from users;

-solution
#Check SyntaxError by pymysql 
>>> cur=connection.cursor()
>>> cur.execute("select * from users")
1
>>> rows = cur.fetchall()
>>> print(rows)
((1, 'John@salody.com', 'j1542'),)


- issue 3
# 한국어 자연어처리 (KoNLpy, Kkma, Komoran, Okt 활용)

from konlpy.tag import Komoran
Traceback (most recent call last):
  File "<pyshell#0>", line 1, in <module>
    from konlpy.tag import Komoran
  File "D:\Python\Python39\lib\site-packages\konlpy\__init__.py", line 12, in <module>
    from konlpy import (
  File "D:\Python\Python39\lib\site-packages\konlpy\tag\__init__.py", line 6, in <module>
    from konlpy.tag._hannanum import Hannanum
  File "D:\Python\Python39\lib\site-packages\konlpy\tag\_hannanum.py", line 7, in <module>
    import jpype
  File "D:\Python\Python39\lib\site-packages\jpype\__init__.py", line 18, in <module>
    import _jpype
ImportError: DLL load failed while importing _jpype: DLL 초기화 루틴을 실행할 수 없습니다.

# Python, move to D:/  (Modify Environment Variable) 

- solution 1
1. import JPYPE
Traceback (most recent call last):
  File "<pyshell#1>", line 1, in <module>
    import JPYPE
ModuleNotFoundError: No module named 'JPype'
** caution : What if the file was already downloded successfully, not needed to check 'Import JPype'

2. getDefaultJVMPath()

- solution 2
# Upgrade pip before Uninstall JPype1
cmd => python.exe -m pip install --upgrade pip
	Proceed (y/n)? y
	
	pip install JPype1
	Collecting JPype1
 	 Downloading JPype1-1.2.1-cp39-cp39-win_amd64.whl (360 kB)
    	 |████████████████████████████████| 360 kB 547 kB/s
	Installing collected packages: JPype1
	Successfully installed JPype1-1.2.1
	
	pip install konlpy
	Requirement already satisfied
	

- issue 4
# Downloading Tensorflow
with cmd mode
python -m pip install --upgrade https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.12.0-py3-none-any.whl

# Failed to download Tensorflow
now (21.Feb.22), Tensorflow doesn't match with Python 3.9.
Needed the version to be modified to 3.8 (or 3.2)


- solution
# Downloading different version of Python and Proceed by Pycharm



	


